test/functions/bradc/intUint2.good
intUint2.chpl:9: error: Ambiguous call 'foo(1, 2)'
intUint2.chpl:1: note: candidates are: foo(x: int, y: uint)
intUint2.chpl:5: note:                 foo(x: uint, y: int)
intUint2.chpl:12: error: Ambiguous call 'foo(1u, 2u)'
intUint2.chpl:1: note: candidates are: foo(x: int, y: uint)
intUint2.chpl:5: note:                 foo(x: uint, y: int)
